--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		</h1>
 		
 		<div style="text-align:center;"><img src ="1.jpeg" align="top" width="500" height="378" /></div>
-		<p><div style="text-align:right;"> JIN LI<br /> ZHI DOU<div/></p>
+		<p><div style="text-align:center;"> JIN LI<br /> ZHI DOU<div/></p>
 	</body>
 </html>
