--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		</h1>
 		
 		<div style="text-align:center;"><img src ="1.jpeg" align="top" width="500" height="378" /></div>
-		<h1 style="text-align:center">JIN LI<br /> ZHI DOU</h1>
+		<h1 style="text-align:center">ZHI DOU<br /> JIN LI</h1>
 	</body>
 </html>
