--- a/233.html
+++ b/233.html
@@ -6,7 +6,7 @@
     background-color:#5882FA;
     color:white;
     text-align:center;
-    padding:40px£»
+    padding:40pxÂ£Â»
 }
 #nav {
     line-height:30px;
@@ -144,7 +144,7 @@ https://towardsdatascience.com/defining-a-data-science-problem-28c21d817c0b
 </div>
 
 <div id="footer">
-<h4>MADE BY JIN LI, DOU ZHI</h4>
+<h4>MADE BY DOU ZHI, JIN LI</h4>
 </div>
 
 </body>
