--- a/233.html
+++ b/233.html
@@ -6,13 +6,13 @@
     background-color:#5882FA;
     color:white;
     text-align:center;
-    padding:40px£»
+    padding:40pxÂ£Â»
 }
 #nav {
     line-height:30px;
     background-color:#81DAF5;
-    height:2200px;
-    width:300px;
+    height:500%;
+    width:20%;
     float:left;
     padding:5px;	      
 }
